deploy: 0553eb531ee9a4e67c5a13fa44ac0b06d3b1452e

--- a/projects/project1.html
+++ b/projects/project1.html
@@ -264,11 +264,11 @@
 <p>Using Monte Carlo simulations, the equation of state of 3D fluid of argon is simulated
 for a large range of density.</p>
 <figure class="align-right">
-<a class="only-dark reference internal image-reference" href="../_images/avatar-dm.webp"><img alt="The fluid made of argon atoms and simulated using monte carlo and python." class="only-dark" src="../_images/avatar-dm.webp" style="height: 200px;" />
+<a class="only-dark reference internal image-reference" href="../_images/avatar-dm1.webp"><img alt="The fluid made of argon atoms and simulated using monte carlo and python." class="only-dark" src="../_images/avatar-dm1.webp" style="height: 200px;" />
 </a>
 </figure>
 <figure class="align-right">
-<a class="only-light reference internal image-reference" href="../_images/avatar.webp"><img alt="The fluid made of argon atoms and simulated using monte carlo and python" class="only-light" src="../_images/avatar.webp" style="height: 200px;" />
+<a class="only-light reference internal image-reference" href="../_images/avatar1.webp"><img alt="The fluid made of argon atoms and simulated using monte carlo and python" class="only-light" src="../_images/avatar1.webp" style="height: 200px;" />
 </a>
 </figure>
 <p>In 1957, Wood and Parker reported the first numerical study of a 3D fluid that was
